# nham-ey

./: .gitignore  README.md  database.md
client/src/: App.tsx
server/: Dockerfile  docker-compose.yml  manage.py  pyproject.toml
server/nhamey/: asgi.py  settings.py  urls.py  wsgi.py
